Replace deprecated URL constructor
See https://inside.java/2023/02/15/quality-heads-up/

Change-Id: I520a4baeb1442a1a357a88f1755447cd285a77d8